# DEDS_Portfolio_Week2

./: GO_SALES_INVENTORY_LEVELSData.csv  GO_SALES_PRODUCT_FORECASTData.csv  Practicum_2.1_Opdrachten.html  Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.html  Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.html  Practicum_2.3_Opdrachten.ipynb  README.md  Script.ipynb  go_crm.sqlite  go_staff.sqlite  pyproject.toml
