[tool.poetry]
name = "pjotr-sennen-des-portfolio"
version = "0.1.0"
description = "Onze portfolio opdracht voor Week 2 Python"
authors = ["Peter-The-Great <PjotrW15@Gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
